fixed jumping

--- a/assets/stylesheets/portfolio.scss
+++ b/assets/stylesheets/portfolio.scss
@@ -18,6 +18,7 @@ html,body{
   margin:0;
 }
 
+
 .stylistic-font{
   font-family: 'Stylistic Alt', sans-serif !important;
   font-size:75px;
@@ -25,7 +26,8 @@ html,body{
 
 .fixed-header{
   position: fixed !important;
-  padding-left:0 !important;
+  padding:0 !important;
+  width: 50%;
 }
 
 .content-padding{
@@ -44,10 +46,14 @@ html,body{
 
 #landingSlide{
   height:100vh;
+  display:flex;
+  align-items:center;
+  margin-left:50px;
 }
 
 #aboutSlide{
   z-index:20;
+  margin:0 !important;
   .title-block{
     height: 100vh;
     display: flex;
@@ -56,11 +62,11 @@ html,body{
     .title-text{
       @extend .stylistic-font;
       color: white;
-      padding: 12px 15px 15px;
       margin: 0;
     }
   }
   #about-header{
+    padding:0;
     background-color: #f7484e;
   }
   #about-content{
@@ -92,6 +98,7 @@ html,body{
       width: 50%;
       background-color: #EDEDED;
       height: 100%;
+      float:right;
     }
 
     .slide .wrapper {
@@ -105,7 +112,6 @@ html,body{
         left: 50%;
         width: 600px;
         height: 418px;
-        border:1px solid red;
         background: url('/img/kne.png') no-repeat top left;
         background-size:cover;
         transform: translate(-80%, -40%);
@@ -148,6 +154,7 @@ html,body{
     top: 0;
     left: 0;
     z-index: 200;
+    padding:0;
   }
   #about-content{
     position:relative;
